# story

./: App.cpp  App.h  CMakeLists.txt  Cache.cpp  Cache.h  TODO.md  os.h
gui/: GenMainWindow.cpp  GenMainWindow.h  MainWindow.cpp  MainWindow.h  gui.fbp
gui/res/: hammer.png.h  minus.png.h  plus.png.h  question.png.h  save.png.h  share.png.h
osx_bundle/: package.sh  readme.txt
osx_bundle/res/: Info.plist  SB.icns
